--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>test-dynamodb-dax</groupId>
-  <artifactId>test-dynamodb-dax</artifactId>
+  <groupId>dynamodb-dax-testing</groupId>
+  <artifactId>dynamodb-dax-testing</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <dependencies>
@@ -50,6 +50,8 @@
               <descriptorRefs>
                 <descriptorRef>jar-with-dependencies</descriptorRef>
               </descriptorRefs>
+              <finalName>test-dax</finalName>
+              <appendAssemblyId>false</appendAssemblyId>
             </configuration>
           </execution>
         </executions>
